[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }